Bug 457671 - 'Apply' button remains greyed out after any change in 'Recent files' KCM
Summary: 'Apply' button remains greyed out after any change in 'Recent files' KCM
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_recentFiles (other bugs)
Version First Reported In: master
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-09 11:46 UTC by Patrick Silva
Modified: 2022-08-15 18:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-08-09 11:46:38 UTC
STEPS TO REPRODUCE
1. open 'Recent files' KCM
2. change anything
3. 

OBSERVED RESULT
'Apply' button is greyed out

EXPECTED RESULT
'Apply' button is active

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-08-09 19:28:19 UTC
Can reproduce. Gosh, it's embarrassing that I didn't notice this during the initial review.
Comment 2 Bug Janitor Service 2022-08-14 14:33:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1093
Comment 3 Nicolas Fella 2022-08-15 18:30:19 UTC
Git commit d78da3c342262bf850d00d399fe9d55577f61bfd by Nicolas Fella.
Committed on 15/08/2022 at 18:25.
Pushed by nicolasfella into branch 'master'.

[kcms/recentfiles] Fix KConfigXT integration

This fixes managing the changed state and resetting to defaults

M  +9    -0    kcms/recentFiles/kcm_recentFiles.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/d78da3c342262bf850d00d399fe9d55577f61bfd