[kcms/recentfiles] Fix KConfigXT integration

This fixes managing the changed state and resetting to defaults

BUG: 457671